[package]
name = "v3d-tool"
version = "0.1.0"
authors = ["Rafał Harabień <rafalh92@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
base64 = "0.10"

[dependencies.gltf]
version = "0.14"
features = ["extras", "names", "utils"]
default-features = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
