[package]
name = "vmesh"
version = "0.3.5"
authors = ["Rafał Harabień <rafalh92@outlook.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
base64 = "0.13"
serde_json = "1"
serde = "1"
serde_derive = "1"
glam = "0.20.2"

[dependencies.gltf]
version = "1"
features = ["extras", "names", "utils", "KHR_materials_pbrSpecularGlossiness"]
default-features = false
