[package]
name = "vmesh"
version = "0.4.0"
authors = ["Rafał Harabień <rafalh92@outlook.com>"]
edition = "2021"

[dependencies]
byteorder = "1"
serde_json = "1"
serde = "1"
serde_derive = "1"
glam = "0.25"
clap = { version = "4", features = ["derive"] }

[dependencies.gltf]
version = "1"
features = ["extras", "names", "utils", "import", "KHR_materials_pbrSpecularGlossiness"]
default-features = false
